--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 
-logging.level.com.generator.randomgeneratorgame: debug
+logging.level.com.generator.randomgeneratorgame=debug
+
+# db props
+spring.datasource.url=jdbc:h2:mem:appdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
