--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 logging.level.com.generator.randomgeneratorgame=debug
+logging.level.org.springframework=info
 
 # db props
 spring.datasource.url=jdbc:h2:mem:appdb
@@ -9,4 +10,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
